src/objects/supply__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>供应商类型</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>设立年月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>供应商</relationshipLabel>
        <relationshipName>Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>供应商</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>供应商名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>